Fix spacing in Edit Baseline Name modal under title
Also fixed spacing of form groups in edit baseline name modal and edit/add fact modals

--- a/src/App.scss
+++ b/src/App.scss
@@ -301,8 +301,6 @@
 
   .fact-value {
     width: 270px;
-    padding-top: 10px;
-    padding-bottom: 10px;
   }
 
   .edit-baseline-header {
